--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-# requirements.txt
 streamlit>=1.32.0
-streamlit-webrtc>=0.47.0
-opencv-python-headless>=4.8.0
 mediapipe>=0.10.14
 numpy
-pandas
-sgp4
-av
+pillow
+scikit-learn
